# CSA

./: .gitignore  Makefile  README.md  create_rpm.sh  csa.spec  index.html  job.spec  params.json
csa/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  configure.in
csa/cmd/: Makefile.am  acctdisk.c  acctdusg.c  csa.conf.in  csa.holidays  csa_redhat.in  csa_suse.in  csaaddc.c  csachargefee.c  csackpacct.in  csacms.c  csacom.c  csacon.c  csacrep.c  csadrep.c  csaedit.c  csagetconfig.c  csajrep.c  csaperiod.in  csarecy.c  csarun.in  csaswitch.c  csaverify.c  dodisk.in  lastlogin.in  nulladm.in
csa/cmd/csabuild/: Makefile.am  build.c  dump.c  files.c  init.c  main.c  process.c  sbu.c  special.c  wkmgmt.c  write.c
csa/cmd/ja/: Makefile.am  flow.c  init.c  main.c  process.c  special.c  summary.c
csa/csad/: Makefile.am  csa.c  csa_daemon.c  csa_job.c  csa_nl.c  hash.c  main.c
csa/include/: Makefile.am  acctctl.h  acctdef.h.in  acctmsg.h  cacct.h  cms.h  convert.h  csa.h  csa_api.h  csa_conf.h.in  csa_ctl.h  csa_delay.h  csa_job.h  csa_nl.h  csaacct.h  csabuild.h  csaedit.h  csaja.h  extern_build.h  extern_ja.h  hash.h  sbu.h
csa/intl/: Makefile.in
csa/lib/: Makefile.am  acctio.c  basic.c  config.c  convert_cacct.c  convert_cms.c  convert_hdr.c  convert_pacct.c  csa_api.c  error.c  header.c  init_pacct.c  init_value.c  init_wm.c  name_to_gid.c  name_to_prid.c  name_to_uid.c  peak_offpeak.c  sbu.c  ucputime.c  user_sbu.c  valid.c
csa/man/: Makefile.am  acctdisk.8.in  acctdusg.8.in  csa.8.in  csaaddc.8.in  csabuild.8.in  csachargefee.8.in  csackpacct.8.in  csacms.8.in  csacom.1.in  csacon.8.in  csacrep.8.in  csadrep.8.in  csaedit.8.in  csagetconfig.8.in  csajrep.8.in  csaperiod.8.in  csarecy.8.in  csarun.8.in  csaswitch.8.in  csaverify.8.in  dodisk.8.in  ja.1  lastlogin.8.in  nulladm.8.in
csa/man/man3/: Makefile.am  csa_auth.3  csa_check.3  csa_halt.3  csa_jastart.3  csa_jastop.3  csa_kdstat.3  csa_rcdstat.3  csa_start.3  csa_stop.3  csa_wracct.3
csa/po/: Makefile.in.in  POTFILES.in
csa/tests/: Makefile.am  README  csa-test.ks  csa_ja-n.ks  csa_ja-o.ks  csa_ja-s.ks  csa_ja-t.ks  csa_ja_cpu.ks  csacom_cpu.ks  csacom_io.ks  csatest_api.c
job/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  configure.in
job/cmd/: Makefile.am  jattach.c  jdetach.c  jkill.c  jsethid.c  jstat.c  jwait.c  jxcsa.c
job/include/: Makefile.am  job.h  job_csa.h  job_hash.h  jobctl.h
job/jobd/: Makefile.am  jobd.c  jobd_hash.c
job/lib/: Makefile.am  job.c  jobctl.c
job/man/: Makefile.am
job/man/man1/: Makefile.am  jkill.1  jstat.1  jwait.1  jxcsa.1
job/man/man3/: Makefile.am  job_attachpid.3  job_create.3  job_detachjid.3  job_detachpid.3  job_getjid.3  job_getjidcnt.3  job_getjidlist.3  job_getpidcnt.3  job_getpidlist.3  job_getprimepid.3  job_getuid.3  job_killjid.3  job_sethid.3  job_waitjid.3
job/man/man7/: Makefile.am  job.7
job/man/man8/: Makefile.am  jattach.8  jdetach.8  jsethid.8
job/pam/: Makefile.am  pam_job.c
job/scripts/: Makefile.am  job_redhat.in  job_suse.in
job/tests/: Makefile.am  jobtest.c
